--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ main div {
 .big-slide {
     grid-column: 1 / 3;
     display: grid;
-    gap: 20px;
+    gap: 40px;
     grid-template-columns: repeat(3, 1fr);
 }
 
@@ -234,15 +234,62 @@ main div {
 }
 
 .side-info {
+    
+
     grid-column: 3 / 4;
     grid-row: 1 / span 2;
+
+    display: grid;
+    grid-template-columns: 1fr;
 }
 
-@keyframes rotate {
-    from {
-        transform: rotate(0deg); /* Start rotation from 0 degrees */
-    }
-    to {
-        transform: rotate(-360deg); /* End rotation at 360 degrees (full circle) */
-    }
+.side-info div{
+    min-height: auto;
+}
+
+.task-container {
+    align-content: start;
+    height: 500px;
+    height: min-content;
+    background-color: #1b1b1e;
+    border-radius: 20px;
+    padding: 20px 20px 40px;
+    display: grid;
+    grid-template-columns: auto;
+    gap: 40px;
+}
+
+
+.task {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    gap: 20px;
+
+}
+
+.task-name h3 {
+    margin-bottom: 10px;
+}
+
+.task-progress {
+    margin-top: 10px;
+    text-align: center;
+}
+
+.task-progress span {
+    font-size: .8rem;
+}
+
+.task-info a img {
+    padding: unset;
+}
+
+.task-info {
+    text-align: right;
+}
+
+hr {
+    border: none;
+    border-bottom: 1px solid black;
+    height: 1px;
 }
